<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".NoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="start"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="Take a NOTE here!"
        >
    </TextView>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/bg_edit"
        android:gravity="start|top"
        android:padding="4dp"
        android:textColor="#1e1e1e" />

    <RadioGroup
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/priority"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/trivial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background = "#CC98FB98"
            android:text="@string/trivial" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background = "#FFFFFAFA"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/important"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background = "#DCFFD700"
            android:text="@string/important" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm" />

</LinearLayout>